translation to persian

--- a/_includes/old-bs-docs.html
+++ b/_includes/old-bs-docs.html
@@ -1,8 +1,8 @@
 <div class="bs-old-docs">
   <div class="container">
     <strong>
-      <a href="{{ page.base_url }}2.3.2/">Looking for Bootstrap 2.3.2 docs?</a>
+      <a href="{{ page.base_url }}2.3.2/">به دنبال مستندات نسخهٔ ۲.۳.۲ هستید؟</a>
     </strong>
-    We've moved it to a new home while we push forward with Bootstrap 3. <a href="http://blog.getbootstrap.com/">Read the blog</a> for details.
+    از آن‌جایی که ما در حال تغییر به نسخهٔ ۳ بوت‌استرپ هستیم، صفحه اصلی را تغییر دادیم.
   </div>
 </div>
