--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-inverse navbar-fixed-top bs-docs-nav">
   <div class="container">
-    <a href="{{ page.base_url }}" class="navbar-brand">Bootstrap 3 RC1</a>
+    <a href="{{ page.base_url }}" class="navbar-brand">بوت‌استرپ ۳ آرسی۱</a>
     <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
@@ -9,19 +9,19 @@
     <div class="nav-collapse collapse bs-navbar-collapse">
       <ul class="nav navbar-nav">
         <li{% if page.slug == "getting-started" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}getting-started">Getting started</a>
+          <a href="{{ page.base_url }}getting-started">از این‌جا شروع کنید</a>
         </li>
         <li{% if page.slug == "css" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}css">CSS</a>
+          <a href="{{ page.base_url }}css">سی‌اس‌اس</a>
         </li>
         <li{% if page.slug == "components" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}components">Components</a>
+          <a href="{{ page.base_url }}components">اجزا</a>
         </li>
         <li{% if page.slug == "js" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}javascript">JavaScript</a>
+          <a href="{{ page.base_url }}javascript">جاوااسکریپت</a>
         </li>
         <li{% if page.slug == "customize" %} class="active"{% endif %}>
-          <a href="{{ page.base_url }}customize">Customize</a>
+          <a href="{{ page.base_url }}customize">سفارشی</a>
         </li>
       </ul>
     </div>
