changes version config and translation of layouts/home

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,10 +19,10 @@
 
       <ul class="bs-masthead-links">
         <li class="current-version">
-          Currently v{{ site.current_version }}
+          نسخهٔ جاری: {{ site.current_version }}
         </li>
         <li>
-          <a href="{{ page.base_url }}2.3.2/">Bootstrap 2.3.2 docs</a>
+          <a href="{{ page.base_url }}2.3.2/">مستندات بوت‌استرپ ۲.۳.۲</a>
         </li>
         <li>
           <a href="{{ site.repo }}" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Jumbotron links', 'GitHub project']);">پروژه در گیت‌هاب</a>
