--- a/less/normalize.less
+++ b/less/normalize.less
@@ -8,6 +8,11 @@
 // Correct `block` display not defined in IE 8/9.
 //
 
+* {
+  direction: rtl;
+  text-align: right;
+}
+
 article,
 aside,
 details,
