--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -41,7 +41,7 @@
   vertical-align: middle; // match .btn alignment given font-size hack above
   > .btn {
     position: relative;
-    float: left;
+    float: right;
     // Bring the "active" button to the front
     &:hover,
     &:focus,
@@ -62,7 +62,7 @@
   .btn + .btn-group,
   .btn-group + .btn,
   .btn-group + .btn-group {
-    margin-left: -1px;
+    margin-right: -1px;
   }
 }
 
@@ -71,14 +71,14 @@
   .clearfix();
 
   .btn-group {
-    float: left;
+    float: right;
   }
   // Space out series of button groups
   > .btn,
   > .btn-group {
     + .btn,
     + .btn-group {
-      margin-left: 5px;
+      margin-right: 5px;
     }
   }
 }
@@ -89,20 +89,20 @@
 
 // Set corners individual because sometimes a single button can be in a .btn-group and we need :first-child and :last-child to both match
 .btn-group > .btn:first-child {
-  margin-left: 0;
+  margin-right: 0;
   &:not(:last-child):not(.dropdown-toggle) {
-    .border-right-radius(0);
+    .border-left-radius(0);
   }
 }
 // Need .dropdown-toggle since :last-child doesn't apply given a .dropdown-menu immediately after it
 .btn-group > .btn:last-child:not(:first-child),
 .btn-group > .dropdown-toggle:not(:first-child) {
-  .border-left-radius(0);
+  .border-right-radius(0);
 }
 
 // Custom edits for including btn-groups within btn-groups (useful for including dropdown buttons within a btn-group)
 .btn-group > .btn-group {
-  float: left;
+  float: right;
 }
 .btn-group > .btn-group:not(:first-child):not(:last-child) > .btn {
   border-radius: 0;
@@ -110,11 +110,11 @@
 .btn-group > .btn-group:first-child {
   > .btn:last-child,
   > .dropdown-toggle {
-    .border-right-radius(0);
+    .border-left-radius(0);
   }
 }
 .btn-group > .btn-group:last-child > .btn:first-child {
-  .border-left-radius(0);
+  .border-right-radius(0);
 }
 
 // On active and open, don't show outline
@@ -155,7 +155,7 @@
 
 // Reposition the caret
 .btn .caret {
-  margin-left: 0;
+  margin-right: 0;
 }
 // Carets in other button sizes
 .btn-lg .caret {
@@ -193,7 +193,7 @@
   > .btn-group + .btn,
   > .btn-group + .btn-group {
     margin-top: -1px;
-    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -202,11 +202,11 @@
     border-radius: 0;
   }
   &:first-child:not(:last-child) {
-    border-top-right-radius: @border-radius-base;
+    border-top-left-radius: @border-radius-base;
     .border-bottom-radius(0);
   }
   &:last-child:not(:first-child) {
-    border-bottom-left-radius: @border-radius-base;
+    border-bottom-right-radius: @border-radius-base;
     .border-top-radius(0);
   }
 }
