--- a/less/input-groups.less
+++ b/less/input-groups.less
@@ -91,20 +91,20 @@
 .input-group-btn:first-child > .btn,
 .input-group-btn:first-child > .dropdown-toggle,
 .input-group-btn:last-child > .btn:not(:last-child):not(.dropdown-toggle) {
-  .border-right-radius(0);
+  .border-left-radius(0);
 }
 .input-group-addon:first-child {
-  border-right: 0;
+  border-left: 0;
 }
 .input-group .form-control:last-child,
 .input-group-addon:last-child,
 .input-group-btn:last-child > .btn,
 .input-group-btn:last-child > .dropdown-toggle,
 .input-group-btn:first-child > .btn:not(:first-child) {
-  .border-left-radius(0);
+  .border-right-radius(0);
 }
 .input-group-addon:last-child {
-  border-left: 0;
+  border-right: 0;
 }
 
 // Button input groups
@@ -117,7 +117,7 @@
   position: relative;
   // Jankily prevent input button groups from wrapping
   + .btn {
-    margin-left: -4px;
+    margin-right: -4px;
   }
   // Bring the "active" button to the front
   &:hover,
