--- a/less/modals.less
+++ b/less/modals.less
@@ -16,7 +16,7 @@
   body&,
   .navbar-fixed-top,
   .navbar-fixed-bottom {
-    margin-right: 15px
+    margin-left: 15px
   }
 }
 
@@ -105,22 +105,22 @@
 .modal-footer {
   margin-top: 15px;
   padding: (@modal-inner-padding - 1) @modal-inner-padding @modal-inner-padding;
-  text-align: right; // right align buttons
+  text-align: left; // left align buttons
   border-top: 1px solid @modal-footer-border-color;
   .clearfix(); // clear it in case folks use .pull-* classes on buttons
 
   // Properly space out buttons
   .btn + .btn {
-    margin-left: 5px;
+    margin-right: 5px;
     margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
   }
   // but override that for button groups
   .btn-group .btn + .btn {
-    margin-left: -1px;
+    margin-right: -1px;
   }
   // and override it for block buttons as well
   .btn-block + .btn-block {
-    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -128,8 +128,8 @@
 @media screen and (min-width: @screen-sm) {
 
   .modal-dialog {
-    left: 50%;
-    right: auto;
+    right: 50%;
+    left: auto;
     width: 600px;
     padding-top: 30px;
     padding-bottom: 30px;
