--- a/less/popovers.less
+++ b/less/popovers.less
@@ -6,12 +6,12 @@
 .popover {
   position: absolute;
   top: 0;
-  left: 0;
+  right: 0;
   z-index: @zindex-popover;
   display: none;
   max-width: @popover-max-width;
   padding: 1px;
-  text-align: left; // Reset given new insertion method
+  text-align: right; // Reset given new insertion method
   background-color: @popover-bg;
   background-clip: padding-box;
   border: 1px solid @popover-fallback-border-color;
@@ -24,9 +24,9 @@
 
   // Offset the popover to account for the popover arrow
   &.top     { margin-top: -10px; }
-  &.right   { margin-left: 10px; }
+  &.left   { margin-right: 10px; }
   &.bottom  { margin-top: 10px; }
-  &.left    { margin-left: -10px; }
+  &.right    { margin-right: -10px; }
 }
 
 .popover-title {
@@ -69,8 +69,8 @@
 
 .popover {
   &.top .arrow {
-    left: 50%;
-    margin-left: -@popover-arrow-outer-width;
+    right: 50%;
+    margin-right: -@popover-arrow-outer-width;
     border-bottom-width: 0;
     border-top-color: @popover-arrow-outer-fallback-color; // IE8 fallback
     border-top-color: @popover-arrow-outer-color;
@@ -78,42 +78,11 @@
     &:after {
       content: " ";
       bottom: 1px;
-      margin-left: -@popover-arrow-width;
+      margin-right: -@popover-arrow-width;
       border-bottom-width: 0;
       border-top-color: @popover-arrow-color;
     }
   }
-  &.right .arrow {
-    top: 50%;
-    left: -@popover-arrow-outer-width;
-    margin-top: -@popover-arrow-outer-width;
-    border-left-width: 0;
-    border-right-color: @popover-arrow-outer-fallback-color; // IE8 fallback
-    border-right-color: @popover-arrow-outer-color;
-    &:after {
-      content: " ";
-      left: 1px;
-      bottom: -@popover-arrow-width;
-      border-left-width: 0;
-      border-right-color: @popover-arrow-color;
-    }
-  }
-  &.bottom .arrow {
-    left: 50%;
-    margin-left: -@popover-arrow-outer-width;
-    border-top-width: 0;
-    border-bottom-color: @popover-arrow-outer-fallback-color; // IE8 fallback
-    border-bottom-color: @popover-arrow-outer-color;
-    top: -@popover-arrow-outer-width;
-    &:after {
-      content: " ";
-      top: 1px;
-      margin-left: -@popover-arrow-width;
-      border-top-width: 0;
-      border-bottom-color: @popover-arrow-color;
-    }
-  }
-
   &.left .arrow {
     top: 50%;
     right: -@popover-arrow-outer-width;
@@ -124,8 +93,39 @@
     &:after {
       content: " ";
       right: 1px;
+      bottom: -@popover-arrow-width;
       border-right-width: 0;
       border-left-color: @popover-arrow-color;
+    }
+  }
+  &.bottom .arrow {
+    right: 50%;
+    margin-right: -@popover-arrow-outer-width;
+    border-top-width: 0;
+    border-bottom-color: @popover-arrow-outer-fallback-color; // IE8 fallback
+    border-bottom-color: @popover-arrow-outer-color;
+    top: -@popover-arrow-outer-width;
+    &:after {
+      content: " ";
+      top: 1px;
+      margin-right: -@popover-arrow-width;
+      border-top-width: 0;
+      border-bottom-color: @popover-arrow-color;
+    }
+  }
+
+  &.right .arrow {
+    top: 50%;
+    left: -@popover-arrow-outer-width;
+    margin-top: -@popover-arrow-outer-width;
+    border-left-width: 0;
+    border-right-color: @popover-arrow-outer-fallback-color; // IE8 fallback
+    border-right-color: @popover-arrow-outer-color;
+    &:after {
+      content: " ";
+      left: 1px;
+      border-left-width: 0;
+      border-right-color: @popover-arrow-color;
       bottom: -@popover-arrow-width;
     }
   }
