--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,18 +55,18 @@
       <div class="container">
         {% include social-buttons.html %}
 
-        <p>Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
-        <p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">Apache License v2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+        <p>طراحی و ساخته‌شده توسط <a href="http://twitter.com/mdo" target="_blank">@mdo</a> و <a href="http://twitter.com/fat" target="_blank">@fat</a> و سازگاری با زبان‌های راست به چپ و مستندات فارسی توسط <a href="http://jnaqsh.com/" target="_blank">شرکت نقش</a>.</p>
+        <p>کد تحت اجازه‌نامه <a href="http://www.apache.org/licenses/LICENSE-2.0" target="_blank">آپاچی نسخهٔ ۲.۰</a> و مستندات تحت اجازه‌نامه <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a> است.</p>
         <ul class="footer-links">
-          <li>Currently v{{ site.current_version }}</li>
+          <li>نسخهٔ جاری: {{ site.current_version }}</li>
           <li class="muted">&middot;</li>
-          <li><a href="{{ page.base_url }}2.3.2/">Bootstrap 2.3.2 docs</a></li>
+          <li><a href="{{ page.base_url }}2.3.2/">مستندات بوت‌استرپ ۲.۳.۲</a></li>
           <li class="muted">&middot;</li>
-          <li><a href="{{ site.blog }}">Blog</a></li>
+          <li><a href="{{ site.blog }}">وبلاگ</a></li>
           <li class="muted">&middot;</li>
-          <li><a href="{{ site.repo }}/issues?state=open">Issues</a></li>
+          <li><a href="{{ site.repo }}/issues?state=open">مشکلات</a></li>
           <li class="muted">&middot;</li>
-          <li><a href="{{ site.repo }}/releases">Releases</a></li>
+          <li><a href="{{ site.repo }}/releases">انتشارها</a></li>
         </ul>
       </div>
     </footer>
