--- a/_includes/social-buttons.html
+++ b/_includes/social-buttons.html
@@ -1,10 +1,10 @@
 <div class="bs-social">
   <ul class="bs-social-buttons">
     <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twbs&amp;repo=bootstrap&amp;type=watch&amp;count=true" width="100" height="20" title="Star on GitHub"></iframe>
+      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=jnaqsh&amp;repo=rbootstrap&amp;type=watch&amp;count=true" width="100" height="20" title="Star on GitHub"></iframe>
     </li>
     <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=twbs&amp;repo=bootstrap&amp;type=fork&amp;count=true" width="102" height="20" title="Fork on GitHub"></iframe>
+      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=jnaqsh&amp;repo=rbootstrap&amp;type=fork&amp;count=true" width="102" height="20" title="Fork on GitHub"></iframe>
     </li>
     <li class="follow-btn">
       <a href="https://twitter.com/rbootstrap" class="twitter-follow-button" data-link-color="#0069D6" data-show-count="true">@rbootstrap را دنبال کنید</a>
