header file is translated

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,15 +4,15 @@
 <meta name="author" content="">
 
 <title>
-  {% if page.title == "Bootstrap" %}
+  {% if page.title == "بوت‌استرپ" %}
     {{ page.title }}
   {% else %}
-    {{ page.title }} &middot; Bootstrap
+    {{ page.title }} &middot; بوت‌استرپ
   {% endif %}
 </title>
 
 <!-- Bootstrap core CSS -->
-<link href="{{ page.base_url }}dist/css/bootstrap.css" rel="stylesheet">
+<link href="{{ page.base_url }}dist/css/rbootstrap.css" rel="stylesheet">
 
 <!-- Documentation extras -->
 <link href="{{ page.base_url }}assets/css/docs.css" rel="stylesheet">
