changes translation to be suitable for version 3.0.0

--- a/_includes/old-bs-docs.html
+++ b/_includes/old-bs-docs.html
@@ -3,6 +3,6 @@
     <strong>
       <a href="{{ page.base_url }}2.3.2/">به دنبال مستندات نسخهٔ ۲.۳.۲ هستید؟</a>
     </strong>
-    از آن‌جایی که ما در حال تغییر به نسخهٔ ۳ بوت‌استرپ هستیم، صفحه اصلی را تغییر دادیم.
+    از آن‌جایی که بوت‌استرپ نسخهٔ ۳ منتشر شده‌است، صفحه اصلی را تغییر دادیم.
   </div>
 </div>
