translation of nav-javascript

--- a/_includes/nav-javascript.html
+++ b/_includes/nav-javascript.html
@@ -1,88 +1,88 @@
 <li>
-  <a href="#js-overview">Overview</a>
+  <a href="#js-overview">مرور کلی</a>
   <ul class="nav">
-    <li><a href="#js-individual-compiled">Individual or compiled</a></li>
-    <li><a href="#js-data-attrs">Data attributes</a></li>
-    <li><a href="#js-programmatic-api">Programmatic API</a></li>
-    <li><a href="#js-noconflict">No conflict</a></li>
-    <li><a href="#js-events">Events</a></li>
+    <li><a href="#js-individual-compiled">منحصربه‌فرد یا کامپایل‌شده</a></li>
+    <li><a href="#js-data-attrs">خصوصیت‌های Data</a></li>
+    <li><a href="#js-programmatic-api">API قابل برنامه‌ریزی</a></li>
+    <li><a href="#js-noconflict">بدون برخورد</a></li>
+    <li><a href="#js-events">رویدادها</a></li>
   </ul>
 </li>
-<li><a href="#transitions">Transitions</a></li>
+<li><a href="#transitions">انتقال‌ها</a></li>
 <li>
-  <a href="#modals">Modal</a>
+  <a href="#modals">مُدال</a>
   <ul class="nav">
-    <li><a href="#modals-examples">Examples</a></li>
-    <li><a href="#modals-usage">Usage</a></li>
-  </ul>
-</li>
-<li>
-  <a href="#dropdowns">Dropdown</a>
-  <ul class="nav">
-    <li><a href="#dropdowns-examples">Examples</a></li>
-    <li><a href="#dropdowns-usage">Usage</a></li>
+    <li><a href="#modals-examples">نمونه‌ها</a></li>
+    <li><a href="#modals-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#scrollspy">Scrollspy</a>
+  <a href="#dropdowns">افتادنی‌ها</a>
   <ul class="nav">
-    <li><a href="#scrollspy-examples">Examples</a></li>
-    <li><a href="#scrollspy-usage">Usage</a></li>
+    <li><a href="#dropdowns-examples">نمونه‌ها</a></li>
+    <li><a href="#dropdowns-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#tabs">Tab</a>
+  <a href="#scrollspy">اسکرول جاسوس</a>
   <ul class="nav">
-    <li><a href="#tabs-examples">Examples</a></li>
-    <li><a href="#tabs-usage">Usage</a></li>
+    <li><a href="#scrollspy-examples">نمونه‌ها</a></li>
+    <li><a href="#scrollspy-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#tooltips">Tooltip</a>
+  <a href="#tabs">تب‌ها</a>
   <ul class="nav">
-    <li><a href="#tooltips-examples">Examples</a></li>
-    <li><a href="#tooltips-usage">Usage</a></li>
+    <li><a href="#tabs-examples">نمونه‌ها</a></li>
+    <li><a href="#tabs-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#popovers">Popover</a>
+  <a href="#tooltips">بالُنک</a>
   <ul class="nav">
-    <li><a href="#popovers-examples">Examples</a></li>
-    <li><a href="#popovers-usage">Usage</a></li>
+    <li><a href="#tooltips-examples">نمونه‌ها</a></li>
+    <li><a href="#tooltips-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#alerts">Alert</a>
+  <a href="#popovers">بالُنک</a>
   <ul class="nav">
-    <li><a href="#alerts-examples">Examples</a></li>
-    <li><a href="#alerts-usage">Usage</a></li>
+    <li><a href="#popovers-examples">نمونه‌ها</a></li>
+    <li><a href="#popovers-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#buttons">Button</a>
+  <a href="#alerts">اخطار</a>
   <ul class="nav">
-    <li><a href="#buttons-examples">Examples</a></li>
-    <li><a href="#buttons-usage">Usage</a></li>
+    <li><a href="#alerts-examples">نمونه‌ها</a></li>
+    <li><a href="#alerts-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#collapse">Collapse</a>
+  <a href="#buttons">دکمه</a>
   <ul class="nav">
-    <li><a href="#collapse-examples">Examples</a></li>
-    <li><a href="#collapse-usage">Usage</a></li>
+    <li><a href="#buttons-examples">نمونه‌ها</a></li>
+    <li><a href="#buttons-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#carousel">Carousel</a>
+  <a href="#collapse">فروریختنی</a>
   <ul class="nav">
-    <li><a href="#carousel-examples">Examples</a></li>
-    <li><a href="#carousel-usage">Usage</a></li>
+    <li><a href="#collapse-examples">نمونه‌ها</a></li>
+    <li><a href="#collapse-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#affix">Affix</a>
+  <a href="#carousel">چرخ فلک</a>
   <ul class="nav">
-    <li><a href="#affix-examples">Examples</a></li>
-    <li><a href="#affix-usage">Usage</a></li>
+    <li><a href="#carousel-examples">نمونه‌ها</a></li>
+    <li><a href="#carousel-usage">استفاده</a></li>
+  </ul>
+</li>
+<li>
+  <a href="#affix">پیوست</a>
+  <ul class="nav">
+    <li><a href="#affix-examples">نمونه‌ها</a></li>
+    <li><a href="#affix-usage">استفاده</a></li>
   </ul>
 </li>
