--- a/_includes/nav-getting-started.html
+++ b/_includes/nav-getting-started.html
@@ -1,44 +1,44 @@
 <li>
-  <a href="#download">Download Bootstrap</a>
+  <a href="#download">دانلود بوت‌استرپ</a>
   <ul class="nav">
-    <li><a href="#download-compiled">Compiled CSS, JS, and fonts</a></li>
-    <li><a href="#download-additional">Additional downloads</a></li>
-    <li><a href="#download-cdn">Bootstrap CDN</a></li>
+    <li><a href="#download-compiled">سی‌اس‌اس، جاوااسکریپت و فونت‌های کامپایل‌شده</a></li>
+    <li><a href="#download-additional">دانلودهای دیگر</a></li>
+    <li><a href="#download-cdn">CDN برای بوت‌استرپ</a></li>
   </ul>
 </li>
 <li>
-  <a href="#whats-included">What's included</a>
+  <a href="#whats-included">چه چیزهایی را شامل می‌شود؟</a>
 </li>
 <li>
-  <a href="#template">Basic template</a>
+  <a href="#template">قالب اچ‌تی‌ام‌ال</a>
 </li>
 <li>
-  <a href="#examples">Examples</a>
+  <a href="#examples">نمونه‌ها</a>
 </li>
 <li>
-  <a href="#disable-responsive">Disabling responsiveness</a>
+  <a href="#disable-responsive">غیرفعال کردن پاسخگویی</a>
 </li>
 <li>
-  <a href="#migration">Migrating from 2.x to 3.0</a>
+  <a href="#migration">مهاجرت از نسخهٔ ۲ به ۳.۰</a>
   <ul class="nav">
-    <li><a href="#migration-classes">Major class changes</a></li>
-    <li><a href="#migration-new">What's new</a></li>
-    <li><a href="#migration-dropped">What's removed</a></li>
-    <li><a href="#migration-notes">Additional notes</a></li>
+    <li><a href="#migration-classes">تغییرات کلی کلاس‌های سی‌اس‌اس</a></li>
+    <li><a href="#migration-new">چه چیزهایی جدید است؟</a></li>
+    <li><a href="#migration-dropped">چه چیزهایی حذف شده‌است؟</a></li>
+    <li><a href="#migration-notes">نکاتی دیگر</a></li>
   </ul>
 </li>
 <li>
-  <a href="#browsers">Browser support</a>
+  <a href="#browsers">پشتیبانی از مرورگر</a>
 </li>
 <li>
-  <a href="#third-parties">Third party support</a>
+  <a href="#third-parties">پشتیبانی از شخص سوم</a>
 </li>
 <li>
-  <a href="#accessibility">Accessibility</a>
+  <a href="#accessibility">دسترسی</a>
 </li>
 <li>
-  <a href="#license-faqs">License FAQs</a>
+  <a href="#license-faqs">پرسشگان درباره اجازه‌نامه</a>
 </li>
 <li>
-  <a href="#customizing">Customizing Bootstrap</a>
+  <a href="#customizing">سفارشی کردن بوت‌استرپ</a>
 </li>
