--- a/_includes/nav-javascript.html
+++ b/_includes/nav-javascript.html
@@ -45,7 +45,7 @@
   </ul>
 </li>
 <li>
-  <a href="#popovers">بالُنک</a>
+  <a href="#popovers">پوب</a>
   <ul class="nav">
     <li><a href="#popovers-examples">نمونه‌ها</a></li>
     <li><a href="#popovers-usage">استفاده</a></li>
