translation of nav-components

--- a/_includes/nav-components.html
+++ b/_includes/nav-components.html
@@ -1,138 +1,138 @@
 <li>
-  <a href="#glyphicons">Glyphicons</a>
+  <a href="#glyphicons">آیکن‌ها</a>
   <ul class="nav">
-    <li><a href="#glyphicons-glyphs">Available glyphs</a></li>
-    <li><a href="#glyphicons-how-to-use">How to use</a></li>
-    <li><a href="#glyphicons-examples">Examples</a></li>
+    <li><a href="#glyphicons-glyphs">آیکن‌های موجود</a></li>
+    <li><a href="#glyphicons-how-to-use">چگونه استفاده کنم؟</a></li>
+    <li><a href="#glyphicons-examples">نمونه‌ها</a></li>
   </ul>
 </li>
 <li>
-  <a href="#dropdowns">Dropdowns</a>
+  <a href="#dropdowns">افتادنی‌ها</a>
   <ul class="nav">
-    <li><a href="#dropdowns-example">Example</a></li>
-    <li><a href="#dropdowns-alignment">Alignment options</a></li>
-    <li><a href="#dropdowns-headers">Headers</a></li>
-    <li><a href="#dropdowns-disabled">Disabled menu items</a></li>
+    <li><a href="#dropdowns-example">نمونه</a></li>
+    <li><a href="#dropdowns-alignment">انتخاب‌های همراستاسازی</a></li>
+    <li><a href="#dropdowns-headers">تیترها</a></li>
+    <li><a href="#dropdowns-disabled">آیتم‌های منوی غیرفعال</a></li>
   </ul>
 </li>
 <li>
-  <a href="#btn-groups">Button groups</a>
+  <a href="#btn-groups">گروه‌های دکمه</a>
   <ul class="nav">
-    <li><a href="#btn-groups-single">Basic example</a></li>
-    <li><a href="#btn-groups-toolbar">Button toolbar</a></li>
-    <li><a href="#btn-groups-sizing">Sizing</a></li>
-    <li><a href="#btn-groups-nested">Nesting</a></li>
-    <li><a href="#btn-groups-vertical">Vertical variation</a></li>
-    <li><a href="#btn-groups-justified">Justified link variation</a></li>
+    <li><a href="#btn-groups-single">نمونه پایه</a></li>
+    <li><a href="#btn-groups-toolbar">گروهی از چندین دکمه</a></li>
+    <li><a href="#btn-groups-sizing">اندازه</a></li>
+    <li><a href="#btn-groups-nested">تودرتو</a></li>
+    <li><a href="#btn-groups-vertical">گروه‌های دکمه عمودی</a></li>
+    <li><a href="#btn-groups-justified">پیوندهای هم‌اندازه</a></li>
   </ul>
 </li>
 <li>
-  <a href="#btn-dropdowns">Button dropdowns</a>
+  <a href="#btn-dropdowns">افتادنی‌های دکمه‌ای</a>
   <ul class="nav">
-    <li><a href="#btn-dropdowns-single">Single button dropdowns</a></li>
-    <li><a href="#btn-dropdowns-split">Split button dropdowns</a></li>
-    <li><a href="#btn-dropdowns-sizing">Sizing</a></li>
-    <li><a href="#btn-dropdowns-dropup">Dropup variation</a></li>
+    <li><a href="#btn-dropdowns-single">افتادنی‌های تک دکمه‌ای</a></li>
+    <li><a href="#btn-dropdowns-split">افتادنی‌های دکمه‌ای جدا</a></li>
+    <li><a href="#btn-dropdowns-sizing">اندازه</a></li>
+    <li><a href="#btn-dropdowns-dropup">منوهای بالارونده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#input-groups">Input groups</a>
+  <a href="#input-groups">ورودی‌های گروهی</a>
   <ul class="nav">
-    <li><a href="#input-groups-basic">Basic example</a></li>
-    <li><a href="#input-groups-sizing">Sizing</a></li>
-    <li><a href="#input-groups-checkboxes-radios">Checkbox and radios addons</a></li>
-    <li><a href="#input-groups-buttons">Button addons</a></li>
-    <li><a href="#input-groups-buttons-dropdowns">Buttons with dropdowns</a></li>
-    <li><a href="#input-groups-buttons-segmented">Segmented buttons</a></li>
+    <li><a href="#input-groups-basic">نمونه پایه</a></li>
+    <li><a href="#input-groups-sizing">اندازه</a></li>
+    <li><a href="#input-groups-checkboxes-radios">افزونه‌های Checkbox و radios</a></li>
+    <li><a href="#input-groups-buttons">افزونه‌های دکمه‌ای</a></li>
+    <li><a href="#input-groups-buttons-dropdowns">با دکمه‌های افتادنی</a></li>
+    <li><a href="#input-groups-buttons-segmented">با دکمه‌های جدا</a></li>
   </ul>
 </li>
 <li>
-  <a href="#nav">Navs</a>
+  <a href="#nav">ناوبری‌ها</a>
   <ul class="nav">
-    <li><a href="#nav-tabs">Tabs</a></li>
-    <li><a href="#nav-pills">Pills</a></li>
-    <li><a href="#nav-justified">Justified nav</a></li>
-    <li><a href="#nav-disabled-links">Disabled links</a></li>
-    <li><a href="#nav-alignment">Alignment options</a></li>
-    <li><a href="#nav-dropdowns">Using dropdowns</a></li>
+    <li><a href="#nav-tabs">تب‌ها</a></li>
+    <li><a href="#nav-pills">پیل‌ها</a></li>
+    <li><a href="#nav-justified">ناوبری همراستا</a></li>
+    <li><a href="#nav-disabled-links">پیوندهای غیرفعال</a></li>
+    <li><a href="#nav-alignment">انتخاب‌های همراستاسازی</a></li>
+    <li><a href="#nav-dropdowns">استفاده از افتادنی‌ها</a></li>
   </ul>
 </li>
 <li>
-  <a href="#navbar">Navbar</a>
+  <a href="#navbar">نوارهای ناوبری</a>
   <ul class="nav">
-    <li><a href="#navbar-default">Default navbar</a></li>
-    <li><a href="#navbar-forms">Forms</a></li>
-    <li><a href="#navbar-buttons">Buttons</a></li>
-    <li><a href="#navbar-text">Text</a></li>
-    <li><a href="#navbar-links">Non-nav links</a></li>
-    <li><a href="#navbar-component-alignment">Component alignment</a></li>
-    <li><a href="#navbar-fixed-top">Fixed to top</a></li>
-    <li><a href="#navbar-fixed-bottom">Fixed to bottom</a></li>
-    <li><a href="#navbar-static-top">Static top</a></li>
-    <li><a href="#navbar-inverted">Inverted navbar</a></li>
+    <li><a href="#navbar-default">نوار ناوبری پایه</a></li>
+    <li><a href="#navbar-forms">فرم‌ها</a></li>
+    <li><a href="#navbar-buttons">دکمه‌ها</a></li>
+    <li><a href="#navbar-text">متن</a></li>
+    <li><a href="#navbar-links">پیوندهای غیرناوبری</a></li>
+    <li><a href="#navbar-component-alignment">همراستاسازی اجزا</a></li>
+    <li><a href="#navbar-fixed-top">چسبیده به بالا</a></li>
+    <li><a href="#navbar-fixed-bottom">چسبیده به پایین</a></li>
+    <li><a href="#navbar-static-top">بالای ایستا</a></li>
+    <li><a href="#navbar-inverted">نوار ناوبری با رنگ متمایز</a></li>
   </ul>
 </li>
-<li><a href="#breadcrumbs">Breadcrumbs</a></li>
+<li><a href="#breadcrumbs">تکه کیک‌ها</a></li>
 <li>
-  <a href="#pagination">Pagination</a>
+  <a href="#pagination">صفحه‌بندی</a>
   <ul class="nav">
-    <li><a href="#pagination-default">Default pagination</a></li>
-    <li><a href="#pagination-pager">Pager</a></li>
+    <li><a href="#pagination-default">صفحه‌بندی پیش‌فرض</a></li>
+    <li><a href="#pagination-pager">صفحه‌بند</a></li>
   </ul>
 </li>
-<li><a href="#labels">Labels</a></li>
-<li><a href="#badges">Badges</a></li>
-<li><a href="#jumbotron">Jumbotron</a></li>
-<li><a href="#page-header">Page header</a></li>
+<li><a href="#labels">برچسب‌ها</a></li>
+<li><a href="#badges">نشان‌ها</a></li>
+<li><a href="#jumbotron">جامبو</a></li>
+<li><a href="#page-header">تیتر صفحه</a></li>
 <li>
-  <a href="#thumbnails">Thumbnails</a>
+  <a href="#thumbnails">بندانگشتی‌ها</a>
   <ul class="nav">
-    <li><a href="#thumbnails-default">Default example</a></li>
-    <li><a href="#thumbnails-custom-content">Custom content</a></li>
-  </ul>
-</li>
-<li>
-  <a href="#alerts">Alerts</a>
-  <ul class="nav">
-    <li><a href="#alerts-examples">Examples</a></li>
-    <li><a href="#alerts-dismissable">Dismissable alerts</a></li>
-    <li><a href="#alerts-links">Links in alerts</a></li>
+    <li><a href="#thumbnails-default">نمونه پیش‌فرض</a></li>
+    <li><a href="#thumbnails-custom-content">محتوای سفارشی</a></li>
   </ul>
 </li>
 <li>
-  <a href="#progress">Progress bars</a>
+  <a href="#alerts">اخطارها</a>
   <ul class="nav">
-    <li><a href="#progress-basic">Basic example</a></li>
-    <li><a href="#progress-alternatives">Contextual alternatives</a></li>
-    <li><a href="#progress-striped">Striped</a></li>
-    <li><a href="#progress-animated">Animated</a></li>
-    <li><a href="#progress-stacked">Stacked</a></li>
+    <li><a href="#alerts-examples">نمونه‌ها</a></li>
+    <li><a href="#alerts-dismissable">اخطارها با دکمه حذف</a></li>
+    <li><a href="#alerts-links">پیوندها در اخطارها</a></li>
   </ul>
 </li>
 <li>
-  <a href="#media">Media object</a>
+  <a href="#progress">نوارهای پیشرفت</a>
   <ul class="nav">
-    <li><a href="#media-default">Default media</a></li>
-    <li><a href="#media-list">Media list</a></li>
+    <li><a href="#progress-basic">نمونه پایه</a></li>
+    <li><a href="#progress-alternatives">جایگزین‌های وابسته</a></li>
+    <li><a href="#progress-striped">راه‌راه</a></li>
+    <li><a href="#progress-animated">دارای حرکت</a></li>
+    <li><a href="#progress-stacked">پشته‌ای</a></li>
   </ul>
 </li>
 <li>
-  <a href="#list-group">List group</a>
+  <a href="#media">شی رسانه</a>
   <ul class="nav">
-    <li><a href="#list-group-basic">Basic example</a></li>
-    <li><a href="#list-group-badges">Badges</a></li>
-    <li><a href="#list-group-linked">Linked items</a></li>
-    <li><a href="#list-group-custom-content">Custom content</a></li>
+    <li><a href="#media-default">نمونه پیش‌فرض</a></li>
+    <li><a href="#media-list">فهرست رسانه</a></li>
   </ul>
 </li>
 <li>
-  <a href="#panels">Panels</a>
+  <a href="#list-group">گروه‌های فهرستی</a>
   <ul class="nav">
-    <li><a href="#panels-basic">Basic example</a></li>
-    <li><a href="#panels-heading">Panel with heading</a></li>
-    <li><a href="#panels-alternatives">Contextual alternatives</a></li>
-    <li><a href="#panels-tables">With tables</a>
-    <li><a href="#panels-list-group">With list groups</a>
+    <li><a href="#list-group-basic">نمونه پایه</a></li>
+    <li><a href="#list-group-badges">نشان‌ها</a></li>
+    <li><a href="#list-group-linked">آیتم‌های پیوندشده</a></li>
+    <li><a href="#list-group-custom-content">محتوای سفارشی</a></li>
   </ul>
 </li>
-<li><a href="#wells">Wells</a></li>
+<li>
+  <a href="#panels">پنل‌ها</a>
+  <ul class="nav">
+    <li><a href="#panels-basic">نمونه پایه</a></li>
+    <li><a href="#panels-heading">پنل با تیتر</a></li>
+    <li><a href="#panels-alternatives">جایگزین‌های وابسته</a></li>
+    <li><a href="#panels-tables">با جدول‌ها</a>
+    <li><a href="#panels-list-group">با گروه‌های فهرستی</a>
+  </ul>
+</li>
+<li><a href="#wells">چاه‌ها</a></li>
