translation of nav-customize

--- a/_includes/nav-customize.html
+++ b/_includes/nav-customize.html
@@ -1,40 +1,40 @@
 <li>
-  <a href="#less">LESS components</a>
+  <a href="#less">اجزای LESS</a>
 </li>
 <li>
-  <a href="#plugins">jQuery plugins</a>
+  <a href="#plugins">پلاگین‌های جی‌کوئری</a>
 </li>
 <li>
-  <a href="#less-variables">LESS variables</a>
+  <a href="#less-variables">متغیرهای LESS</a>
   <ul class="nav">
-    <li><a href="#variables-basics">Basics</a></li>
-    <li><a href="#variables-buttons">Buttons</a></li>
-    <li><a href="#variables-form-states">Form states</a></li>
-    <li><a href="#variables-alerts">Alerts</a></li>
-    <li><a href="#variables-navbar">Navbar</a></li>
-    <li><a href="#variables-nav">Nav</a></li>
-    <li><a href="#variables-tables">Tables</a></li>
-    <li><a href="#variables-forms">Forms</a></li>
-    <li><a href="#variables-dropdowns">Dropdowns</a></li>
-    <li><a href="#variables-panels-wells">Panels and wells</a></li>
-    <li><a href="#variables-accordion">Accordion</a></li>
-    <li><a href="#variables-badges">Badges</a></li>
-    <li><a href="#variables-breadcrumbs">Breadcrumbs</a></li>
-    <li><a href="#variables-jumbotron">Jumbotron</a></li>
-    <li><a href="#variables-modals">Modals</a></li>
-    <li><a href="#variables-carousel">Carousel</a></li>
-    <li><a href="#variables-list-group">List group</a></li>
-    <li><a href="#variables-thumbnails">Thumbnails</a></li>
-    <li><a href="#variables-progress">Progress bars</a></li>
-    <li><a href="#variables-pagination">Pagination</a></li>
-    <li><a href="#variables-pager">Pager</a></li>
-    <li><a href="#variables-labels">Labels</a></li>
-    <li><a href="#variables-tooltips-popovers">Tooltips and popovers</a></li>
-    <li><a href="#variables-close">Close button</a></li>
-    <li><a href="#variables-type">Type</a></li>
-    <li><a href="#variables-other">Other</a></li>
+    <li><a href="#variables-basics">پایه‌ها</a></li>
+    <li><a href="#variables-buttons">دکمه‌ها</a></li>
+    <li><a href="#variables-form-states">وضعیت‌های فرم</a></li>
+    <li><a href="#variables-alerts">اخطارها</a></li>
+    <li><a href="#variables-navbar">نوارهای ناوبری</a></li>
+    <li><a href="#variables-nav">ناوبری‌ها</a></li>
+    <li><a href="#variables-tables">جدول‌ها</a></li>
+    <li><a href="#variables-forms">فرم‌ها</a></li>
+    <li><a href="#variables-dropdowns">افتادنی‌ها</a></li>
+    <li><a href="#variables-panels-wells">پنل‌ها و چاه‌ها</a></li>
+    <li><a href="#variables-accordion">فروریختنی</a></li>
+    <li><a href="#variables-badges">نشان‌ها</a></li>
+    <li><a href="#variables-breadcrumbs">تکه کیک‌ها</a></li>
+    <li><a href="#variables-jumbotron">جامبو</a></li>
+    <li><a href="#variables-modals">مُدال‌ها</a></li>
+    <li><a href="#variables-carousel">چرخ و فلک</a></li>
+    <li><a href="#variables-list-group">گروه‌های فهرستی</a></li>
+    <li><a href="#variables-thumbnails">بندانگشتی‌ها</a></li>
+    <li><a href="#variables-progress">نوارهای پیشرفت</a></li>
+    <li><a href="#variables-pagination">صفحه‌بندی</a></li>
+    <li><a href="#variables-pager">صفحه‌بند</a></li>
+    <li><a href="#variables-labels">برچسب‌ها</a></li>
+    <li><a href="#variables-tooltips-popovers">بالُنک‌ها و پوب‌ها</a></li>
+    <li><a href="#variables-close">دکمه بستن</a></li>
+    <li><a href="#variables-type">نوع</a></li>
+    <li><a href="#variables-other">دیگر</a></li>
   </ul>
 </li>
 <li>
-  <a href="#download">Download</a>
+  <a href="#download">دانلود</a>
 </li>
