translation of sr in includes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <!-- Place anything custom after this. -->
   </head>
   <body>
-    <a class="sr-only" href="#content">Skip navigation</a>
+    <a class="sr-only" href="#content">رد کردن ناوبری</a>
 
     <!-- Docs master nav -->
     {% include nav-main.html %}
