--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
+        <span class="sr-only">تغییر وضعیت ناوبری</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
