translation of titles in nav-css to persian

--- a/_includes/nav-css.html
+++ b/_includes/nav-css.html
@@ -20,7 +20,7 @@
     <li><a href="#grid-responsive-resets">بازنشانی‌های ستون پاسخگو</a></li>
     <li><a href="#grid-offsetting">ستون‌های فاصله‌دار</a></li>
     <li><a href="#grid-nesting">ستون‌های تودرتو</a></li>
-    <li><a href="#grid-column-ordering">ستون ترتیبی</a></li>
+    <li><a href="#grid-column-ordering">ترتیب ستون‌ها</a></li>
     <li><a href="#grid-less">متغیرها و mixins در LESS</a></li>
   </ul>
 </li>
