fixes border of bs-glyphicons ul

--- a/assets/css/docs.css
+++ b/assets/css/docs.css
@@ -948,7 +948,7 @@ h1[id] {
   padding-bottom: 1px;
   margin-bottom: 20px;
   list-style: none;
-  overflow: hidden;
+/*  overflow: hidden;*/
 }
 .bs-glyphicons li {
   float: right;
