translation of nav-javascript titles to persion

--- a/_includes/nav-javascript.html
+++ b/_includes/nav-javascript.html
@@ -10,7 +10,7 @@
 </li>
 <li><a href="#transitions">انتقال‌ها</a></li>
 <li>
-  <a href="#modals">مُدال</a>
+  <a href="#modals">مُدال‌ها</a>
   <ul class="nav">
     <li><a href="#modals-examples">نمونه‌ها</a></li>
     <li><a href="#modals-usage">استفاده</a></li>
@@ -38,14 +38,14 @@
   </ul>
 </li>
 <li>
-  <a href="#tooltips">بالُنک</a>
+  <a href="#tooltips">بالُنک‌ها</a>
   <ul class="nav">
     <li><a href="#tooltips-examples">نمونه‌ها</a></li>
     <li><a href="#tooltips-usage">استفاده</a></li>
   </ul>
 </li>
 <li>
-  <a href="#popovers">پوب</a>
+  <a href="#popovers">پوب‌ها</a>
   <ul class="nav">
     <li><a href="#popovers-examples">نمونه‌ها</a></li>
     <li><a href="#popovers-usage">استفاده</a></li>
@@ -59,7 +59,7 @@
   </ul>
 </li>
 <li>
-  <a href="#buttons">دکمه</a>
+  <a href="#buttons">دکمه‌ها</a>
   <ul class="nav">
     <li><a href="#buttons-examples">نمونه‌ها</a></li>
     <li><a href="#buttons-usage">استفاده</a></li>
@@ -73,7 +73,7 @@
   </ul>
 </li>
 <li>
-  <a href="#carousel">چرخ فلک</a>
+  <a href="#carousel">چرخ و فلک</a>
   <ul class="nav">
     <li><a href="#carousel-examples">نمونه‌ها</a></li>
     <li><a href="#carousel-usage">استفاده</a></li>
